add an accessible label to the channel input

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </script>
   </head>
   <body>
-    <input type="text" name="channel">
+    <span id="channel_input_label">Channel name</span>
+    <input aria-labelledby="channel_input_label" type="text" name="channel">
 
     <script src="index.js" charset="utf-8"></script>
   </body>
