--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <span id="channel_input_label">Channel name</span>
     <input aria-labelledby="channel_input_label" type="text" name="channel">
 
+    <span id="subscriber_input_label">Only read messages from subscribers</span>
+    <input aria-labelledby="subscriber_input_label" type="checkbox" name="subscriber">
+
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
