wrap inputs in section tags

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     </script>
   </head>
   <body>
-    <span id="channel_input_label">Channel name</span>
-    <input aria-labelledby="channel_input_label" type="text" name="channel">
+    <section>
+      <span id="channel_input_label">Channel name</span>
+      <input aria-labelledby="channel_input_label" type="text" name="channel">
+    </section>
 
-    <span id="subscriber_input_label">Only read messages from subscribers</span>
-    <input aria-labelledby="subscriber_input_label" type="checkbox" name="subscriber">
+    <section>
+      <span id="subscriber_input_label">Only read messages from subscribers</span>
+      <input aria-labelledby="subscriber_input_label" type="checkbox" name="subscriber">
+    </section>
 
     <script src="index.js" charset="utf-8"></script>
   </body>
