added a volume control

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </section>
 
     <section>
+      <span id="volume_label">Volume</span>
+      <input aria-labelledby="volume_label" type="range" name="volume" min="0" max="500" value="100">
+    </section>
+
+    <section>
       <span id="subscriber_input_label">Only read messages from subscribers</span>
       <input aria-labelledby="subscriber_input_label" type="checkbox" name="subscriber">
     </section>
