choose between a male and female voice

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     </section>
 
     <section>
+      <span id="voice_label">Voice</span>
+      <select aria-labelledby="voice_label" name="voice">
+        <option value="f1">Female</option>
+        <option value="m4" selected>Male</option>
+      </select>
+    </section>
+
+    <section>
       <span id="subscriber_input_label">Only read messages from subscribers</span>
       <input aria-labelledby="subscriber_input_label" type="checkbox" name="subscriber">
     </section>
