--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
       </article>
       <article>
         <textarea aria-labelledby="word_input_label"
-                  aria-describedby="word_input_description"
-                  name="word_list">
-        </textarea>
-      </article>
-      <article>
-        <span id="word_input_description">Enter a list of words with one word on each line.</span>
+                  name="word_list"
+                  placeholder="Enter a list of words with one word on each line."></textarea>
       </article>
     </section>
 
