allow filtering of chat commands

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       </article>
     </section>
 
+    <section>
+      <span id="exclamation_label">Filter out chat commands (messages that start with '!')</span>
+      <input aria-labeledby="exclamation_label" type="checkbox" name="exclamation" checked>
+    </section>
+
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
