reorder label and checkbox; add basic CSS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       meSpeak.loadConfig("mespeak/mespeak_config.json");
       meSpeak.loadVoice("mespeak/voices/en/en.json");
     </script>
+
+    <link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
   </head>
   <body>
     <form>
@@ -44,8 +46,8 @@
       </label>
 
       <label for="exclamation">
-        Filter out chat commands (messages that start with '!')
         <input id="exclamation" type="checkbox" checked>
+        Filter out chat commands (messages that start with '!')
       </label>
 
       <label for="user_list">
