--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="index.css" media="screen" charset="utf-8">
   </head>
   <body>
+    <h1>Twitch Chat Reader</h1>
+
     <form>
       <label for="channel">
         Channel name:
