--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <label for="volume">
           Volume:
-          <input id="volume" type="range" name="volume" min="0" max="500" value="100">
+          <input id="volume" type="range" name="volume" min="0" max="1" step="0.1" value="0.5">
         </label>
 
         <label for="voice">
